syntax = "proto3";

package examples;

option go_package = "github.com/yedf/dtm/examples";
import "dtmgrpc/dtmgrpc.proto";

// The dtm service definition.
service Busi {
  rpc CanSubmit(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransIn(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOut(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransInRevert(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutRevert(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransInConfirm(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutConfirm(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc XaNotify(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}

  rpc TransInXa(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutXa(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransInTcc(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutTcc(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransInTccNested(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}

  rpc TransInBSaga(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutBSaga(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransInRevertBSaga(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
  rpc TransOutRevertBSaga(dtmgrpc.BusiRequest) returns (dtmgrpc.BusiReply) {}
}

